--- a/DataGo/en.lproj/MainStoryboard.storyboard
+++ b/DataGo/en.lproj/MainStoryboard.storyboard
@@ -39,7 +39,7 @@
                                     <outlet property="delegate" destination="2" id="qd4-eE-RkU"/>
                                 </connections>
                             </tableView>
-                            <view contentMode="scaleToFill" id="pgE-O5-IUQ">
+                            <view hidden="YES" contentMode="scaleToFill" id="pgE-O5-IUQ">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="372"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
@@ -380,7 +380,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password here" textAlignment="center" minimumFontSize="17" id="9F1-R6-Ivc">
-                                <rect key="frame" x="101" y="214" width="119" height="31"/>
+                                <rect key="frame" x="101" y="171" width="119" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
@@ -593,81 +593,6 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
     <resources>
         <image name="first" width="16" height="16"/>
     </resources>
-    <classes>
-        <class className="ClothViewController" superclassName="DetailViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ClothViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="refreshData:"/>
-                <relationship kind="action" name="showItems:"/>
-                <relationship kind="action" name="showSearchedItems:"/>
-                <relationship kind="outlet" name="searchField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="DetailViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/DetailViewController.h"/>
-        </class>
-        <class className="EditViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/EditViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="buttonOK:"/>
-                <relationship kind="outlet" name="button" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="picker" candidateClass="UIPickerView"/>
-                <relationship kind="outlet" name="textView" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-        <class className="OrderViewController" superclassName="DetailViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/OrderViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="allTrades:"/>
-                <relationship kind="action" name="closedTrades:"/>
-                <relationship kind="action" name="goNext:"/>
-                <relationship kind="action" name="goPrevious:"/>
-                <relationship kind="action" name="goSomeDay:"/>
-                <relationship kind="action" name="notPayTrades:"/>
-                <relationship kind="action" name="payTrades:"/>
-                <relationship kind="action" name="sentTrades:"/>
-                <relationship kind="action" name="showHideTools:"/>
-                <relationship kind="action" name="switchPeriod:"/>
-                <relationship kind="action" name="updateData:"/>
-                <relationship kind="outlet" name="datePicker" candidateClass="UIDatePicker"/>
-                <relationship kind="outlet" name="infoView" candidateClass="UIWebView"/>
-                <relationship kind="outlet" name="rootView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
-                <relationship kind="outlet" name="toolView" candidateClass="UIView"/>
-            </relationships>
-        </class>
-        <class className="SentViewController" superclassName="DetailViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SentViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="updateView:"/>
-                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="SplashViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SplashViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="passField" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-        <class className="StatViewController" superclassName="DetailViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/StatViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="goNext:"/>
-                <relationship kind="action" name="goPrevious:"/>
-                <relationship kind="action" name="goSomeDay:"/>
-                <relationship kind="action" name="reCal:"/>
-                <relationship kind="outlet" name="infoText" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="infoView" candidateClass="UIWebView"/>
-            </relationships>
-        </class>
-        <class className="TopSessionController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TopSessionController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
